# call-center

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
client/: client.cpp
include/: call.h  call_center.h  cdr.h  config.h  http_server.h  http_session.h  logging_macros.h  operator.h  pch.h  random.h  utils.h
output/: CallCenterExec.exe.LAPTOP-OV3QI5SV.timur.log.INFO.20231207-165516.15804  CallCenterExec.exe.LAPTOP-OV3QI5SV.timur.log.WARNING.20231207-165526.15804
src/: call.cpp  call_center.cpp  cdr.cpp  config.cpp  http_server.cpp  http_session.cpp  logging_macros.cpp  main.cpp  operator.cpp  utils.cpp
test/: test.cpp
